Fix jumping background on mobiles, refactor code

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,7 +12,7 @@ body {
   grid-template-rows: auto auto 8rem;
   min-height: 100vh;
   margin: 0;
-  font-family: Friz-Quadrata-Regular;
+  font-family: Beaufort-for-LOL-medium;
   letter-spacing: 2px;
   color: $main-color;
   padding: 0 2rem;
